Fixed horizontal body overflow styling.

--- a/wp-content/themes/wp-festival-v2.0/static/styles/src/general.less
+++ b/wp-content/themes/wp-festival-v2.0/static/styles/src/general.less
@@ -11,6 +11,10 @@
 
 // Box sizing. Do not remove this, a bug in Bootstrap causes layout crash if this is not specified.
 
+body {
+  overflow-x: hidden;
+}
+
 *{
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
